[tool.poetry]
name = "anti-brokenator"
version = "0.1.0"
description = "project for expense tracking, budget planning etc."
authors = ["Shubi Gaur"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
